--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@angular/ssr": "^19.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "express-jwt": "^8.5.1",
+    "node-jsonwebtoken": "^0.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
