--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-jwt": "^8.5.1",
+    "ngx-pagination": "^6.0.3",
     "node-jsonwebtoken": "^0.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
